# b3-core

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: app_menu.rs  empty_window.rs  event_handling.rs  hello_app.rs  hello_vulkan.rs  hello_window.rs  hello_world.rs
examples/assets/: gears.tif
examples/hello_app/: Cargo.toml
examples/hello_app/src/: main.rs
examples/hello_vulkan/: Cargo.toml  base.rs  helpers.rs
examples/hello_vulkan/src/: base.rs  helpers.rs  main.rs
examples/hello_window/: Cargo.toml
examples/hello_window/src/: main.rs
examples/hello_window/src/assets/: Info.plist
lib/: Cargo.toml
lib/src/: application.rs  dpi.rs  errors.rs  events.rs  geometry.rs  icon.rs  lib.rs  menu.rs  window.rs
lib/src/platform/: application.rs  icon.rs  menu.rs  notification.rs  window.rs
lib/src/platform_impl/macos/: app_delegate.rs  application.rs  events.rs  icon.rs  menu.rs  mod.rs  notification.rs  view.rs  window.rs  window_delegate.rs  window_utils.rs
src/: application.rs  events.rs  icon.rs  image.rs  lib.rs  menu.rs  notification.rs  window.rs
src/macos/: app_delegate.rs  application.rs  delegate.rs  events.rs  ffi.rs  image.rs  menu.rs  mod.rs  observers.rs  panicinfo.rs  runloop.rs  window.rs  window_delegate.rs
src/platform/: application.rs  image.rs  menu.rs  mod.rs  window.rs
src/platform_impl/: mod.rs
src/platform_impl/macos/: icon.rs  menu.rs  window.rs
