[package]
name = "b3-core"
version = "0.1.0"
edition = "2021"

[[example]]
name = "hello-app"
path = "examples/hello_app.rs"

[[example]]
name = "hello-window"
path = "examples/hello_window.rs"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9.4"
objc2 = "0.5.1"
objc2-app-kit = {version = "0.2.0", features = ["NSApplication", "NSButton", "NSControl", "NSEvent", "NSGraphics", "NSImage", "NSGraphicsContext", "NSMenu", "NSMenuItem", "NSResponder", "NSRunningApplication", "NSView", "NSWindow"]}
objc2-foundation = {version = "0.2.0", features = ["dispatch", "NSEnumerator", "NSNotification", "NSObject", "NSString", "NSThread"]}
